--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "reload": "^3.1.1"
+  },
+  "dependencies": {
+    "express-http-proxy": "^1.6.3",
+    "http-proxy-middleware": "^2.0.6",
+    "url": "^0.11.0"
   }
 }
