--- a/pages/zkconfig-comparer.json
+++ b/pages/zkconfig-comparer.json
@@ -99,8 +99,8 @@
               "title": "配置项比较",
               "body": {
                 "type": "diff-editor",
-                "name": "valueA",
-                "diffValue": "${valueB}"
+                "name": "valueB",
+                "diffValue": "${valueA}"
               }
             }
           }
