Revert "feat: add prefix /quality"
This reverts commit 2812c58c02cfc7a4606d0cacbde716411e6f84f4.

--- a/pages/zkconfig-comparer.json
+++ b/pages/zkconfig-comparer.json
@@ -99,8 +99,8 @@
               "title": "配置项比较",
               "body": {
                 "type": "diff-editor",
-                "name": "valueB",
-                "diffValue": "${valueA}"
+                "name": "valueA",
+                "diffValue": "${valueB}"
               }
             }
           }
