feat: add accessToken

--- a/pages/zkconfig-comparer.json
+++ b/pages/zkconfig-comparer.json
@@ -8,7 +8,10 @@
     "autoFillHeight": true,
     "api": {
       "method": "get",
-      "url": "/api/quality/zkconfig_comparer"
+      "url": "/api/quality/zkconfig_comparer",
+      "headers": {
+        "Authorization": "${ls:accessToken}"
+      }
     },
     "keepItemSelectionOnPageChange": true,
     "filter": {
